# rock-paper-scissor

./: .coveragerc  .env.github  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  pytets.ini
.github/: settings.yml
.github/workflows/: ci.yml
app/: conftest.py
app/api/: game_mode.py  serializers.py  tests.py  urls.py  views.py
app/app/: settings.py  tests.py  urls.py
app/frontend/: tests.py  urls.py  views.py
app/frontend/management/commands/: test.py
app/frontend/static/css/: style.css
app/frontend/static/js/: script.js
app/templates/: base.html
app/templates/frontend/: 404.html  game.html  index.html
