[tool.poetry]
name = "rock-paper-scissor"
version = "0.1.0"
description = ""
authors = ["Alexandru Leorda <alexandru.leorda@gmail.com>"]
readme = "README.md"
packages = [{include = "rock_paper_scissor"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
